--- a/src/index.html
+++ b/src/index.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Mesto</title>
-    <link rel="stylesheet" href="./pages/index.css">
+    <link rel="stylesheet" href="<%=htmlWebpackPlugin.files.chunks.main.css %>">
 </head>
 
 <body>
         
     <div class="root">
         <header class="header root__section">
-            <img src="./images/logo.svg" alt="mesto logo" class="logo">
+            <img src="<%=require('./images/logo.svg').default%>" alt="mesto logo" class="logo">
         </header>
         <div class="profile root__section">
             <div class="user-info">
@@ -33,7 +33,7 @@
 
         <div class="popup">
             <div class="popup__content">
-                <img src="./images/close.svg" alt="" class="popup__close">
+                <img src="<%=require('./images/close.svg').default%>" alt="" class="popup__close">
                 <h3 class="popup__title">Новое место</h3>
                 <form class="popup__form" name="Cards">
                     <input type="text" name="place" class="popup__input popup__input_type_name" placeholder="Название">
@@ -45,7 +45,7 @@
         
         <div class="popup-profile">
             <div class="popup-profile__content">
-                <img src="./images/close.svg" alt="" class="popup-profile__close">
+                <img src="<%=require('./images/close.svg').default%>" alt="" class="popup-profile__close">
                 <h3 class="popup__title">Редактировать профиль</h3>
                 <form class="popup__form" name="Profile" >
                         <input type="text" name="name" class="popup-profile__input popup-profile__input_type_name" placeholder="Имя" required minlength="2" maxlength="30" >
@@ -59,7 +59,7 @@
 
         <div class="popup-image">
             <div class="popup-image__content">
-                    <img src="./images/close.svg" alt="" class="popup-image__close">
+                    <img src="<%=require('./images/close.svg').default%>" alt="" class="popup-image__close">
                     <img src="" alt="" class="popup-image__image" id="imga">
             </div>
         </div>
@@ -67,7 +67,7 @@
         </div>
 
    
-    <script type="text/javascript" src="./script.js">
+    <script type="text/javascript" src="<%= htmlWebpackPlugin.files.chunks.main.entry %>">
     </script>
 </body>
 
